[package]
edition = "2018"
name = "car_demo"
version = "1.3.0"


[[bin]]
name = "car_demo"
path = "src/main.rs"


[dependencies]
ApeRust = { path = "../.." }
lazy_static = "1.3.0"
time = "0.1.42"
piston = "0.42.0"
piston2d-graphics = "0.30.0"
pistoncore-glutin_window = "0.54.0"
piston2d-opengl_graphics = "0.59.0"